--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   flutter_screenutil: ^5.9.3
   shared_preferences: ^2.0.13
   http_interceptor: ^1.0.2
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.5
+
 
 
 
